fixed selection on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -226,4 +226,10 @@ h1 {
     width: 5rem;
     height: 5rem;
   }
+
+  .img-container {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    cursor: default;
+  }
 }
